# wave-from-video

./: .gitignore  CLAUDE.md  README.md  mise.toml  pyproject.toml  spec.md  todo.md
notebooks/: executed_waveform.ipynb  waveform.ipynb
scripts/: README.md  extract_frames.py  run_pipeline.sh  setup.sh  validate_extraction.py
src/wave_from_video/: __init__.py  cli.py  extract.py  io_video.py  render.py  temporal.py
tests/: conftest.py  synthetic.py  test_cli.py  test_extract.py  test_io_video.py  test_notebook.py  test_render.py  test_smoke.py  test_temporal.py
